# ESP32-CAM-METADATA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
Docs/: pinout-2.avif  pinout.avif
components/exif/: CMakeLists.txt  config.h  dummy.c  metadata.c  metadata.h
main/: CMakeLists.txt  connect_wifi.c  main.c
